fixed shift of rows/col when changing the cur day

--- a/src/components/Calendar/CalendarBody/Day/Day.module.css
+++ b/src/components/Calendar/CalendarBody/Day/Day.module.css
@@ -1,5 +1,6 @@
 .days {
     padding: 0.66vw;
+    border: 4px solid beige;
 }
 
 .today {
@@ -11,4 +12,5 @@
     color: crimson;
     border-radius: 50%;
     border: 4px solid crimson;
+    box-sizing: border-box;
 }
