--- a/src/components/Calendar/CurrentDay/CurrentDay.module.css
+++ b/src/components/Calendar/CurrentDay/CurrentDay.module.css
@@ -14,8 +14,7 @@
     font-family: 'Courier New', Courier, monospace;
     color: paleturquoise;
     margin: 0;
-    padding-top: 30px;
-    padding-bottom: 5px;
+    padding-bottom: 25px;
 }
 
 .day-number {
